--- a/entry-3/style.css
+++ b/entry-3/style.css
@@ -59,14 +59,14 @@ a:hover {
 
 #div2{
     position: relative;
-    top: 0%;
+    top: 10px;
     left: 150px;
     display: inline-flex;
 }
 
 #p2{
     position: relative;
-    padding-right: 30px;
+    margin-right: 30px;
     padding-top: 50px;
     width: 400px;
 }
