--- a/style.css
+++ b/style.css
@@ -1,28 +1,35 @@
 body{
     font-family: "Karla", sans-serif;
-    background-color: tan;
+    background-color: #e6ccb2;
 }
+
+/* Header */
 h1{
     font-size: 72px;
     color: #200909;
     margin-left: 10%;
+    line-height: -72px;
 }
 
-#and{
-    color: darkgreen;
-}
-
-#grief{
-
-}
-
+/* & */
 h2{
+    color: darkgreen;
+    font-size: 64px;
+    margin-left: 10%;
+    line-height: -72px;
+}
+
+/* Subheader */
+h3{
     position: relative;
     text-align: right;
-    right: 5%;
+    right: 0%;
     top: -50px;
     background-color: #c5802d;
+    padding: 5px;
+    padding-right: 3%;
 }
+
 
 a{
     background-color: #411818;
@@ -32,16 +39,16 @@ a{
     font-family: "Karla", sans-serif;
     display: inline-block;
     border-radius: 25px;
-    margin-left: 10%;
+    margin: 25px;
     width: 100px;
 }
 
 div{
     display: inline-block;
-    margin-left: 10%;
 }
 
 a:hover{
     background-color: #190909;
     transform: scale(150%);
 }
+
