--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-/* header*/
-.header{
+body{
     background-image: url(../luciav416.github.io/assets/image_26.jpg);
     background-size: 100vw;
-    height: 100%;
-    back
+}
+/* header*/
+.header{
+
 }
 /* title */
 h1{
@@ -27,6 +28,15 @@ h1{
     -webkit-font-feature-settings: "salt";
     font-feature-settings: "salt";
 }
+h2{
+    display: flex;
+    justify-content: flex-end;
+    color: white;
+    font-size: 72px;
+    margin: 0;
+    background-color: black;
+    padding-right: 1.5rem;
+}
 
 /* entries */
 .entries{
@@ -38,9 +48,10 @@ h1{
     margin-top: 50px;
 }
 .entries-child{
-    background-color: grey;
+    background-color: rgb(43, 39, 39);
     color: white;
-    padding: 1em 1em;
+    padding: 25px;
     border-radius: 25px;
-    font-family: "p22-zaner-pro-three", sans-serif;
+    font-size: 45px;
+    margin: 0;
 }
