--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     font-family: "old-claude-lp-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
+    background-color: black;
+    color: white;
 }
 
 * {
@@ -85,6 +87,7 @@ main {
 
 #text-information {
     width: 360px;
+    color: white;
 }
 
 #entries {
@@ -104,11 +107,14 @@ h2 {
     font-style: normal;
     font-size: 1.5rem;
     transition: 0.4s;
+    color: white;
+    padding-bottom: 2px;
 }
 
 .entry-box:hover h2 {
     letter-spacing: 3px;
     font-size: 2rem;
+    color: #dbb42c;
 }
 
 .entries-links {
@@ -117,24 +123,25 @@ h2 {
     transition: 0.4s;
     position: relative;
     overflow: visible;
-    background-color: gainsboro;
     padding: 10px;
     border: 2px;
 }
 
 .entry-box:hover .entries-links {
     height: 150px;
+    background-color: #161a1d;
+
 }
 
 .entries-links::before {
     content: '';
     position: absolute;
-    top: -2px;
-    left: -2px;
+    top: 0px;
+    left: 0px;
     width: 15px;
     height: 15px;
-    border-top: 2px solid grey;
-    border-left: 2px solid grey;
+    border-top: 2px solid whitesmoke;
+    border-left: 2px solid whitesmoke;
     transition: all 0.4s ease;
 }
 
@@ -146,8 +153,8 @@ h2 {
 .entries-links::after {
     content: '';
     position: absolute;
-    bottom: -2px;
-    right: -2px;
+    bottom: 0px;
+    right: 0px;
     width: 15px;
     height: 15px;
     border-bottom: 2px solid grey;
@@ -155,15 +162,23 @@ h2 {
     transition: all 0.4s ease;
 }
 
+.entries-links:hover::after {
+    /* width: 100%;
+    height: 100%; */
+}
+
 a {
     display: block;
     font-size: 1.5rem;
     text-decoration: none;
     transition: 0.4s;
+    color: #f2f4f3;
 }
 
 a:hover {
     letter-spacing: 2px;
+    color: #edc531;
+    opacity: 100%;
 }
 
 
@@ -183,17 +198,25 @@ a:hover {
 
 footer {
     height: 50px;
-    background-color: grey;
+    background-color: black;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    border-top: dotted white;
 }
 
 #my-name {
-    margin-left: 15px;
+    margin-left: 25px;
+    color: white;
+}
+
+#class-name{
+    color: white;
+    margin-right: 25px;
 }
 
 @media screen and (max-width:1024px) {
-    #header-text{
+    #header-text {
         font-size: 10rem;
     }
 }
