--- a/entry-1/style.css
+++ b/entry-1/style.css
@@ -8,7 +8,7 @@ body {
     font-family: "old-claude-lp-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-color: cyan;
+    background-color: black;
 }
 
 * {
@@ -31,6 +31,7 @@ header {
     align-items: center;
     position: fixed;
     width: 100vw;
+    border-bottom: #ced4da 2px dotted;
 }
 
 .header-text {
@@ -58,7 +59,21 @@ main {
     width: 600px;
     display: flex;
     flex-direction: column;
-    padding-top: 100px;
+}
+
+h1 {
+    color: white;
+    font-size: 8rem;
+    width: 1200px;
+    padding: 100px 0px 30px 0px;
+
+    align-self: center;
+    text-align: center;
+    font-family: "fleur", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin: 0;
+    letter-spacing: 1px;
 }
 
 section {
@@ -66,5 +81,5 @@ section {
     padding: 20px;
     background-color: #ced4da;
     color: black;
+    margin-bottom: 40px;
 }
-
