--- a/entry-1/style.css
+++ b/entry-1/style.css
@@ -11,9 +11,9 @@ body {
     background-color: black;
 }
 
-* {
+/* * {
     margin: 0;
-}
+} */
 
 #container {
     display: flex;
@@ -66,7 +66,6 @@ h1 {
     font-size: 8rem;
     width: 1200px;
     padding: 100px 0px 30px 0px;
-
     align-self: center;
     text-align: center;
     font-family: "fleur", sans-serif;
@@ -82,4 +81,33 @@ section {
     background-color: #ced4da;
     color: black;
     margin-bottom: 40px;
+}
+
+h2 {
+    font-family: "charcuterie-etched", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.5rem;
+    margin-top: 0;
+    line-height: 35px;
+    margin-bottom: 15px;
+}
+
+h3 {
+    font-family: "charcuterie-engraved", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2rem;
+    margin-top: 8px;
+    line-height: 35px;
+    margin-bottom: 16px;
+}
+
+h4 {
+    font-family: "charcuterie-flared", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 1.5rem;
 }
