--- a/entry-3/style.css
+++ b/entry-3/style.css
@@ -1,90 +1,129 @@
-html{
+html,
+body {
     font-size: 16px;
     margin: 0;
     padding: 0;
+    justify-content: center;
+    /* https://fonts.adobe.com/fonts/old-claude-lp */
+    font-family: "old-claude-lp-regular", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    background-color: #210f04;
 }
 
-body{
-    background-color: #F2E0D5;
+body {
     margin: 0;
     padding: 0;
 }
 
-.banner{
+.banner {
     display: flex;
     background-color: #260101;
-    position: sticky;
+    position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     justify-content: space-between;
     box-sizing: border-box;
-    border-color: #260101;
     border: 5px;
-    border-style: solid;
     align-items: center;
+    color: white;
+    height: 60px;
+    border-bottom: #bb6b00 2px dotted;
 }
 
-#author{
-    font-family: "old-claude-lp-expert", sans-serif;
+#author {
+    margin-left: 25px;
+    margin-right: 25px;
+    font-family: charcuterie-deco, sans-serif;
     font-weight: 400;
     font-style: normal;
+    letter-spacing: 2px;
     font-size: 1.5rem;
-    color: #D9C6BF;
-    margin: 0px 0px 0px 25px;
-    padding: 8px 0px 8px 0px;
 }
 
-#author:hover{
-    color: #260101;
-    transition: 3s;
-    transition-duration: 5s ease;
-}
-
-.main-menu{
-    font-family: "old-claude-lp-expert", sans-serif;
+#author:hover {
+    font-family: charcuterie-deco, sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 1.5rem;
-    color: #D9C6BF;
-    transition: 0.3s ease;
-    margin: 0px 25px 0px 0px;
-    transition: 0.3s ease;
     text-decoration: none;
-    position: relative;
+    color: white;
+    transition: 0.4s ease;
 }
 
-.main-menu:hover{
+a{
+    font-family: charcuterie-deco, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-decoration: none;
+    color: white;
+    transition: 0.4s ease;
+}
+a:hover {
+    letter-spacing: 5px;
+    color: #f5cb5c;
+}
+
+.main-menu {
+    margin-left: 25px;
+    margin-right: 25px;
+    font-family: charcuterie-deco, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 2px;
+    font-size: 1.5rem;
+}
+
+.main-menu:hover {
     padding-top: 5px;
     text-decoration: underline;
-    
+
 }
 
-.content{
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 60px;
 }
 
-.header{
-    background-color: #A68D85;
-}
+.header {}
 
-#title{
-    font-family: "fleur-display", sans-serif;
-    font-weight: 400;
+#title {
+    font-family: fleur, sans-serif;
     font-style: normal;
+    font-weight: 700;
     font-size: 5rem;
-    color: #260101;
+    color: white;
     width: 1200px;
+    padding-top: 100px;
 }
 
-h1{
+h1 {
     margin: 0;
     text-align: center;
-    padding-top: 25px;
+
 }
 
-#container{
+h2 {
+    font-family: charcuterie-etched, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+    font-size: 3rem;
+    margin: 0px;
+    text-align: center;
+}
+
+h3 {
+    font-family: old-man-eloquent, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: white;
+    text-align: center;
+    margin: 0;
+}
+
+#container {
     width: 1200px;
     font-family: warnock-pro-caption, serif;
     font-weight: 400;
@@ -92,19 +131,26 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
+    gap: 20px;
 }
 
-.text-and-image{
+.text-and-image {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 50px;
 }
 
-.text{
+.text {
     height: auto;
-    width: 600px;
+    width: 540px;
+    font-family: old-claude-lp-regular, sans-serif;
+font-weight: 400;
+font-style: normal;
 }
 
-img{
+img {
     max-height: 340px;
+    transition: 0.4s ease;
 }
