--- a/entry-3/style.css
+++ b/entry-3/style.css
@@ -1,10 +1,182 @@
 html,
 body {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    font-family: "old-claude-lp-regular", sans-serif;
+    background-color: #1e110e;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    width: 1200px;
+    align-items: center;
+}
+
+header {
+    background-color: #1e110e;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    width: 100vw;
+    border-bottom: white 4px dotted;
+    z-index: 1;
+}
+
+.header-text {
+    margin: 25px;
+    font-family: "old-claude-lp-expert", sans-serif;
+    font-size: 1.3rem;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    transition: 0.4s ease;
+}
+
+a:hover {
+    letter-spacing: 2px;
+    color: lightgrey;
+}
+
+#main-page {
+    font-size: 2rem;
+    color: white;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+main {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    color: white;
+    font-size: 8rem;
+    width: 1200px;
+    align-self: center;
+    text-align: center;
+    font-family: "fleur-display", sans-serif;
+    font-weight: normal;
+    margin: 30px 0;
+    letter-spacing: 2.5px;
+}
+
+footer {
+    height: 50px;
+    width: 100vw;
+    background-color: #1e110e;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: dotted white;
+    margin-top: 30px;
+}
+
+#my-name {
+    margin: 25px;
+    color: white;
+}
+
+#class-name {
+    color: white;
+    margin: 25px;
+}
+
+#entry-name {
+    color: white;
+    margin: 25px;
+}
+
+#image{
+    width: 1400px;
+    height: 1200px;
+    background-color: aliceblue;
+    position: relative;
+}
+
+#background-house{
+    background-color: #C19A6B;
+    width: 1064px;
+    height: 533px;
+    position: absolute;
+    left: 168px;
+    bottom: 0px;
+}
+
+#background-house-entrance{
+    background-color: #91734f;
+    width: 364px;
+    height: 626px;
+    position: absolute;
+    left: 518px;
+    bottom: 0px;
+}
+
+/* #roof-1{
+    background-color: #af4e35;
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    left: 168px;
+    top: 467px;
+}
+
+#roof-2{
+    background-color: #af4e35;
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    left: 932px;
+    top: 467px;
+} */
+
+#roof-center{
+    background-color: #af4e35;
+    width: 764px;
+    height: 200px;
+    position: absolute;
+    left: 317px;
+    top: 467px;
+}
+
+.window{
+    background-color: #eeda23;
+    width: 50px;
+    height: 75px;
+    
+}
+
+#w1{
+    position: absolute;
+    top: 700px;
+    left: 218px;
+}
+
+#w{
+    position: absolute;
+    top: 700px;
+    left: 218px;
+}
+/* html,
+body {
     font-size: 16px;
     margin: 0;
     padding: 0;
     justify-content: center;
-    /* https://fonts.adobe.com/fonts/old-claude-lp */
+    https://fonts.adobe.com/fonts/old-claude-lp
     font-family: "old-claude-lp-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -157,4 +329,4 @@ img {
 
 #last-image{
     padding-bottom: 120px;
-}
+} */
