--- a/entry-3/style.css
+++ b/entry-3/style.css
@@ -165,10 +165,48 @@ footer {
     left: 218px;
 }
 
+#w2{
+    position: absolute;
+    top: px;
+    left: px;
+}
+
+#w3{
+    position: absolute;
+    top: px;
+    left: px;
+}
+
+#w4{
+    position: absolute;
+    top: px;
+    left: px;
+}
+
+#w5{
+    position: absolute;
+    top: px;
+    left: px;
+}
+#w6{
+    position: absolute;
+    top: px;
+    left: px;
+}
+#w7{
+    position: absolute;
+    top: px;
+    left: px;
+}
+#w8{
+    position: absolute;
+    top: px;
+    left: px;
+}
 #w{
     position: absolute;
-    top: 700px;
-    left: 218px;
+    top: px;
+    left: px;
 }
 /* html,
 body {
